src/syntax/bibtex/snapshots/texlab__syntax__bibtex__tests__biblatex_examples_003.snap
---
source: src/syntax/bibtex/tests.rs
assertion_line: 109
expression: "setup(r#\"@article{angenendt,\n    author       = {Angenendt, Arnold},\n    title        = {In Honore Salvatoris~-- Vom Sinn und Unsinn der\n                    Patrozinienkunde},\n    journaltitle = {Revue d'Histoire Eccl{\\'e}siastique},\n    date         = 2002,\n    volume       = 97,\n    pages        = {431--456, 791--823},\n    langid       = {german},\n    indextitle   = {In Honore Salvatoris},\n    shorttitle   = {In Honore Salvatoris},\n    annotation   = {A German article in a French journal. Apart from that, a\n                    typical \\texttt{article} entry. Note the \\texttt{indextitle}\n                    field},\n}\"#)"
---
ROOT@0..616
  ENTRY@0..616
    TYPE@0..8 "@article"
    L_CURLY@8..9 "{"
    KEY@9..18 "angenendt"
    COMMA@18..19 ","
    WHITESPACE@19..24 "\n    "
    FIELD@24..64
      KEY@24..30 "author"
      WHITESPACE@30..37 "       "
      EQ@37..38 "="
      WHITESPACE@38..39 " "
      CURLY_GROUP@39..58
        L_CURLY@39..40 "{"
        WORD@40..49 "Angenendt"
        COMMA@49..50 ","
        WHITESPACE@50..51 " "
        WORD@51..57 "Arnold"
        R_CURLY@57..58 "}"
      COMMA@58..59 ","
      WHITESPACE@59..64 "\n    "
    FIELD@64..171
      KEY@64..69 "title"
      WHITESPACE@69..77 "        "
      EQ@77..78 "="
      WHITESPACE@78..79 " "
      CURLY_GROUP@79..165
        L_CURLY@79..80 "{"
        WORD@80..82 "In"
        WHITESPACE@82..83 " "
        WORD@83..89 "Honore"
        WHITESPACE@89..90 " "
        WORD@90..103 "Salvatoris~--"
        WHITESPACE@103..104 " "
        WORD@104..107 "Vom"
        WHITESPACE@107..108 " "
        WORD@108..112 "Sinn"
        WHITESPACE@112..113 " "
        WORD@113..116 "und"
        WHITESPACE@116..117 " "
        WORD@117..123 "Unsinn"
        WHITESPACE@123..124 " "
        WORD@124..127 "der"
        WHITESPACE@127..148 "\n                    "
        WORD@148..164 "Patrozinienkunde"
        R_CURLY@164..165 "}"
      COMMA@165..166 ","
      WHITESPACE@166..171 "\n    "
    FIELD@171..229
      KEY@171..183 "journaltitle"
      WHITESPACE@183..184 " "
      EQ@184..185 "="
      WHITESPACE@185..186 " "
      CURLY_GROUP@186..223
        L_CURLY@186..187 "{"
        WORD@187..192 "Revue"
        WHITESPACE@192..193 " "
        WORD@193..203 "d'Histoire"
        WHITESPACE@203..204 " "
        WORD@204..208 "Eccl"
        CURLY_GROUP@208..213
          L_CURLY@208..209 "{"
          COMMAND_NAME@209..211 "\\'"
          WORD@211..212 "e"
          R_CURLY@212..213 "}"
        WORD@213..222 "siastique"
        R_CURLY@222..223 "}"
      COMMA@223..224 ","
      WHITESPACE@224..229 "\n    "
    FIELD@229..254
      KEY@229..233 "date"
      WHITESPACE@233..242 "         "
      EQ@242..243 "="
      WHITESPACE@243..244 " "
      LITERAL@244..248
        INTEGER@244..248 "2002"
      COMMA@248..249 ","
      WHITESPACE@249..254 "\n    "
    FIELD@254..277
      KEY@254..260 "volume"
      WHITESPACE@260..267 "       "
      EQ@267..268 "="
      WHITESPACE@268..269 " "
      LITERAL@269..271
        INTEGER@269..271 "97"
      COMMA@271..272 ","
      WHITESPACE@272..277 "\n    "
    FIELD@277..318
      KEY@277..282 "pages"
      WHITESPACE@282..290 "        "
      EQ@290..291 "="
      WHITESPACE@291..292 " "
      CURLY_GROUP@292..312
        L_CURLY@292..293 "{"
        WORD@293..301 "431--456"
        COMMA@301..302 ","
        WHITESPACE@302..303 " "
        WORD@303..311 "791--823"
        R_CURLY@311..312 "}"
      COMMA@312..313 ","
      WHITESPACE@313..318 "\n    "
    FIELD@318..347
      KEY@318..324 "langid"
      WHITESPACE@324..331 "       "
      EQ@331..332 "="
      WHITESPACE@332..333 " "
      CURLY_GROUP@333..341
        L_CURLY@333..334 "{"
        WORD@334..340 "german"
        R_CURLY@340..341 "}"
      COMMA@341..342 ","
      WHITESPACE@342..347 "\n    "
    FIELD@347..390
      KEY@347..357 "indextitle"
      WHITESPACE@357..360 "   "
      EQ@360..361 "="
      WHITESPACE@361..362 " "
      CURLY_GROUP@362..384
        L_CURLY@362..363 "{"
        WORD@363..365 "In"
        WHITESPACE@365..366 " "
        WORD@366..372 "Honore"
        WHITESPACE@372..373 " "
        WORD@373..383 "Salvatoris"
        R_CURLY@383..384 "}"
      COMMA@384..385 ","
      WHITESPACE@385..390 "\n    "
    FIELD@390..433
      KEY@390..400 "shorttitle"
      WHITESPACE@400..403 "   "
      EQ@403..404 "="
      WHITESPACE@404..405 " "
      CURLY_GROUP@405..427
        L_CURLY@405..406 "{"
        WORD@406..408 "In"
        WHITESPACE@408..409 " "
        WORD@409..415 "Honore"
        WHITESPACE@415..416 " "
        WORD@416..426 "Salvatoris"
        R_CURLY@426..427 "}"
      COMMA@427..428 ","
      WHITESPACE@428..433 "\n    "
    FIELD@433..615
      KEY@433..443 "annotation"
      WHITESPACE@443..446 "   "
      EQ@446..447 "="
      WHITESPACE@447..448 " "
      CURLY_GROUP@448..613
        L_CURLY@448..449 "{"
        WORD@449..450 "A"
        WHITESPACE@450..451 " "
        WORD@451..457 "German"
        WHITESPACE@457..458 " "
        WORD@458..465 "article"
        WHITESPACE@465..466 " "
        WORD@466..468 "in"
        WHITESPACE@468..469 " "
        WORD@469..470 "a"
        WHITESPACE@470..471 " "
        WORD@471..477 "French"
        WHITESPACE@477..478 " "
        WORD@478..486 "journal."
        WHITESPACE@486..487 " "
        WORD@487..492 "Apart"
        WHITESPACE@492..493 " "
        WORD@493..497 "from"
        WHITESPACE@497..498 " "
        WORD@498..502 "that"
        COMMA@502..503 ","
        WHITESPACE@503..504 " "
        WORD@504..505 "a"
        WHITESPACE@505..526 "\n                    "
        WORD@526..533 "typical"
        WHITESPACE@533..534 " "
        COMMAND_NAME@534..541 "\\texttt"
        CURLY_GROUP@541..551
          L_CURLY@541..542 "{"
          WORD@542..549 "article"
          R_CURLY@549..550 "}"
          WHITESPACE@550..551 " "
        WORD@551..557 "entry."
        WHITESPACE@557..558 " "
        WORD@558..562 "Note"
        WHITESPACE@562..563 " "
        WORD@563..566 "the"
        WHITESPACE@566..567 " "
        COMMAND_NAME@567..574 "\\texttt"
        CURLY_GROUP@574..607
          L_CURLY@574..575 "{"
          WORD@575..585 "indextitle"
          R_CURLY@585..586 "}"
          WHITESPACE@586..607 "\n                    "
        WORD@607..612 "field"
        R_CURLY@612..613 "}"
      COMMA@613..614 ","
      WHITESPACE@614..615 "\n"
    R_CURLY@615..616 "}"

